# tabby

./: Cargo.toml
crates/tabby-index-cli/: Cargo.toml
crates/tabby-index-cli/src/: lib.rs  main.rs
crates/tabby-index-cli/src/commands/: code_search.rs  index.rs  mod.rs  query.rs  tantivy_provider.rs
crates/tabby-index/src/structured_doc/types/: commit.rs
crates/tabby-mcp/: Cargo.toml
crates/tabby-mcp/src/: main.rs
crates/tabby-mcp/src/common/: codesearch_service.rs  counter.rs  mod.rs
