[package]
name = "tabby-index-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
tabby-inference = { path = "../tabby-inference" }
tabby-index = {path = "../tabby-index"}
http-api-bindings = {path = "../http-api-bindings"}
clap = { workspace = true, features = ["derive"]}
tantivy.workspace = true
tabby-common = { path = "../tabby-common" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1.80"
futures = "0.3.30"
csv = "1.3.1"
