[package]
name = "tabby-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tabby-common = { path = '../tabby-common'}
tabby-index-cli = { path = "../tabby-index-cli" }
http-body = "1.0.1"
http-body-util = "0.1.3"
rmcp = { version = "0.8.1", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = {workspace = true, features = ["typed-header"]}
schemars = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }
tokio-util = { version = "0.7" }
#tabby-cli = workspace
futures-util = { version = "0.3" }
tokio-stream = { version = "0.1" }



[dev-dependencies]

tokio-util = { version = "0.7", features = ["codec"] }
